# ROS-ARM-Planning

./: .gitignore  README.md
devel/: .catkin
devel/lib/motoman_control/: motoman_control_node
devel/lib/pkgconfig/: motoman_control.pc  motoman_description.pc  motoman_gazebo.pc  motoman_moveit_bringup.pc  motoman_moveit_config.pc  motoman_moveit_config_motomini.pc  realsense2_camera.pc  realsense2_description.pc  realsense_gazebo_plugin.pc  tf2_pose.pc
src/grasp_control/: CMakeLists.txt  package.xml
src/grasp_control/src/: graspcommand.py
src/motoman_grasp/: CMakeLists.txt  package.xml
src/motoman_grasp/src/: collisionsubscriber.py  graspdemo.py
src/motoman_moveit/: .kinetic_depends.rosinstall  .travis.yml
src/motoman_moveit/motoman_moveit/: CMakeLists.txt  package.xml
src/motoman_moveit/motoman_moveit_bringup/: CMakeLists.txt
src/motoman_moveit/motoman_moveit_bringup/config/motomini_with_gripper/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  motoman_motomini.srdf  ompl_planning.yaml
src/motoman_moveit/motoman_moveit_bringup/config/sda5/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  sda5.srdf
src/motoman_moveit/motoman_moveit_bringup/config/sia5/: ompl_planning.yaml
src/motoman_moveit/motoman_moveit_bringup/config/sia5_with_dhand_and_multi_kinect/: ompl_planning.yaml
src/motoman_moveit/motoman_moveit_bringup/config/sia5_with_kinectv2/: ompl_planning.yaml
src/motoman_moveit/motoman_moveit_bringup/config/sia5_with_multi_kinectv2/: sia5.srdf
src/motoman_moveit/motoman_moveit_bringup/launch/motomini/: motomini_with_gripper_moveit_planning_execution.launch
src/motoman_moveit/motoman_moveit_bringup/launch/motomini/rviz/: moveit_motomini_with_kinectv2.rviz
src/motoman_moveit/motoman_moveit_bringup/launch/sda5/: sda5_moveit_planning_execution.launch
src/motoman_moveit/motoman_moveit_bringup/launch/sda5/rviz/: moveit_sda5.rviz
src/motoman_moveit/motoman_moveit_bringup/launch/sia5/: sia5_moveit_planning_execution.launch  sia5_with_dhand_and_multi_kinect_moveit_planning_execution.launch  sia5_with_dhand_moveit_planning_execution.launch  sia5_with_kinectv2_moveit_planning_execution.launch  sia5_with_multi_kinectv2_moveit_planning_execution.launch
src/motoman_moveit/motoman_moveit_bringup/scene/: wall_problem.scene
src/motoman_moveit/motoman_moveit_config/: CMakeLists.txt  package.xml
src/motoman_moveit/motoman_moveit_config/config/: benchmark.cfg  moveit_sia5.rviz
src/motoman_moveit/motoman_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  joystick_control.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch  sia5_moveit_controller_manager.launch.xml  warehouse.launch
src/motoman_moveit/motoman_moveit_config_motomini/: .setup_assistant  CMakeLists.txt  package.xml
src/motoman_moveit_config_motomini/: .setup_assistant
src/motoman_moveit_config_motomini/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_motomini.srdf  ompl_planning.yaml  ros_controllers.yaml
src/motoman_moveit_config_motomini/launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_planning_execution_trail.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/motoman_robot/: .kinetic_depends.rosinstall  LICENSE  README.md
src/motoman_robot/motoman_description/: CMakeLists.txt
src/motoman_robot/motoman_description/launch/motomini/: motomini.launch  motomini_with_gripper.launch  motomini_with_kinectv2.launch
src/motoman_robot/motoman_description/robots/motomini/: motomini_basic.urdf.xacro  motomini_with_gripper_and_mount.urdf.xacro  motomini_with_gripper_kinectv2.urdf.xacro
src/motoman_robot/motoman_description/urdf/: materials.xacro
src/motoman_robot/motoman_description/urdf/motomini/: body.urdf.xacro
src/motoman_robot/motoman_description/urdf/mount/: cammount.urdf.xacro
src/motoman_robot/motoman_description/urdf/sensor/: _d435.gazebo.xacro  _d435.urdf.xacro
src/motoman_robot/motoman_description/urdf/tool/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  gzplugin_grasp_fix.urdf.xacro  limits.urdf.xacro
src/motoman_robot/motoman_robot/: CMakeLists.txt  package.xml
src/motoman_simulator/motoman_control/: CMakeLists.txt
src/motoman_simulator/motoman_gazebo/: CMakeLists.txt
src/perception/cv_utils/: CMakeLists.txt  package.xml
src/perception/grasp_policy/: CMakeLists.txt  package.xml
src/perception/segmentation/: CMakeLists.txt  package.xml
src/realsense2_camera/: CHANGELOG.rst
src/realsense2_camera/include/: base_realsense_node.h  constants.h
src/realsense2_camera/scripts/: rs2_listener.py
src/realsense2_camera/src/: base_realsense_node.cpp
src/tf2_pose/: CMakeLists.txt
(+62 files in other folders)
